# cpp-project

./: .editorconfig  .gitignore  CMakeLists.txt
src/: main.cpp
